Fri Feb 16 05:37:47 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* tests/Log_Msg_Test.cpp (test_log_msg_features): Added
	  ACE_Log_Msg::PROCESS to a coupld or priority_mask() calls to
 	  make the test work correctly.  Thanks to Kitty for reporting
 	  this.

Thu Feb 15 17:53:31 2001  Frank Hunleth  <fhunleth@cs.wustl.edu>

	* ace/Thread_Manager.i: Simplified casting in
	  ACE_Thread_Descriptor::get_next per suggestion from Carlos.

Thu Feb 15 14:57:59 2001  Frank Hunleth  <fhunleth@cs.wustl.edu>

	* ace/Thread_Manager.i: Fixed typo in ACE_Thread_Descriptor::get_next.

Thu Feb 15 11:33:55 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* tests/Refcounted_Auto_Ptr_Test.cpp (main): Always call ACE_OS::exit(0)
	  to make sure that this test terminates...

	* ace/Thread_Manager.i (get_next): Added an ACE_const_cast() to
	  make certain compilers happy.

	* ace/Logging_Strategy.cpp: Fixed some Unicode problems on Win32.

Thu Feb 15 08:49:44 2001  Carlos O'Ryan  <coryan@uci.edu>

        * bin/nightlybuilds/builds.lst:
          Rename WashU builds so all the Debian builds appear together.

Thu Feb 15 07:15:39 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * ace/Logging_Strategy.{h,cpp}: Added support to generate multiple
          log files, rather than just two.  Thanks to Orlando Ribeiro
          <oribeiro@inescporto.pt> for this fix.

Thu Feb 15 03:36:46 2001  Krishnakumar B  <kitty@cs.wustl.edu>

        * bin/nightlybuilds/builds.lst (WEB):
        Added a new build with TAO_MINIMUM linked statically.

Wed Feb 14 05:28:59 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * ace/Thread_Manager.{h,i}: Added const to state(), grp_id(),
          task(), get_next(), and self().  Thanks to Johnny Willemsen
          <jwillemsen@remedy.nl> for reporting this.

Tue Feb 13 17:51:47 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * tests/Makefile.bor (TESTS): Added Dirent_Test to list of TESTS.