@@ -42,6 +42,20 @@
  * by specifying the -i <sample_interval_in_secs> and -m
  * <max_size_in_KB> options for the Logging_Strategy class in a
  * svc.conf file.
+ *
+ * By default, two logfiles are generated.  It's possible, however, to
+ * generate as many logfiles as necessary to store all the
+ * information.  To achieve this, it is only necessary to indicate the
+ * maximum size of the logfiles via the -m option and the process will
+ * generate automatically the logfiles.  You can control the total
+ * number of logfiles created via the -n option.
+ *
+ * By using the -o option we can also choose the mode of organization
+ * of the files, e.g., the first one is the normal used in Unix
+ * systems (when cron rotates the logs it keeps the lowest number the
+ * most recent one), the second is for increasing speed (we only
+ * create a new log file, and don't rotate the others (fewer accesses
+ * to disk)).
  */
 class ACE_Export ACE_Logging_Strategy : public ACE_Service_Object
 {
@@ -63,17 +77,26 @@ public:
   virtual int handle_timeout (const ACE_Time_Value& tv, const void* arg);
 
   /** Parse arguments provided in svc.conf file.
-   '-f'
-   '-i'
-   '-m'
-   '-n' The maximum number of log_files that we want created.
-   '-o' Specifies that we want the no standard log_files ordering
+   '-f' Pass in the flags (such as OSTREAM, STDERR, LOGGER, VERBOSE,
+        SILENT, VERBOSE_LITE) used to control logging. 
+   '-i' The interval (in seconds) at which the logfile size is sampled
+        (default is 0, i.e., do not sample by default).
+   '-m' Maximum logfile size in Kbytes.
+   '-n' The maximum number of logfiles that we want created.
+   '-o' Specifies that we want the no standard logfiles ordering
         (fastest processing in <handle_timeout>).  Default is not to order
-        log files.  
-   '-p'
-   '-s'
-   '-t'
-   '-w'
+        logfiles.  
+   '-p' Pass in the process-wide priorities to either enable (e.g.,
+        DEBUG, INFO, WARNING, NOTICE, ERROR, CRITICAL, ALERT,
+        EMERGENCY) or to disable (e.g., ~DEBUG, ~INFO, ~WARNING,
+        ~NOTICE, ~ERROR, ~CRITICAL, ~ALERT, ~EMERGENCY).
+   '-s' Ensure that the OSTREAM flag is set
+   '-t' Pass in the thread-wide priorities to either enable (e.g.,
+        DEBUG, INFO, WARNING, NOTICE, ERROR, CRITICAL, ALERT,
+        EMERGENCY) or to disable (e.g., ~DEBUG, ~INFO, ~WARNING,
+        ~NOTICE, ~ERROR, ~CRITICAL, ~ALERT, ~EMERGENCY).
+   '-w' Cause the logfile to be wiped out, both on startup and on
+        reconfiguration. 
    */
   int parse_args (int argc, ACE_TCHAR *argv[]);
 
